# Vibe-Trading

./: README.md  README_ar.md  README_ja.md  README_ko.md  README_zh.md  my_strategy.txt  pyproject.toml  requirements-lock.txt
agent/: requirements.txt  sma_strategy.json
agent/backtest/: runner.py
agent/src/factors/: base.py  registry.py
agent/src/strategy_store/: metrics.py  sqlite_store.py
agent/src/tools/: sdm_decay_scan_tool.py  sdm_status_tool.py
agent/src/tools/ocr/: engine.py
agent/tests/: test_strategy_store.py
agent/tests/reliability/: test_environment_contract.py
docs/: irr-agl-readiness-check.md
frontend/src/pages/: Agent.tsx
