[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-trading-ai"
version = "0.1.11"
description = "Natural-language finance research AI agent"
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
license = { text = "MIT" }
authors = [
    { name = "HKUDS" }
]
keywords = ["Finance", "Trading", "Backtesting", "Agent", "Swarm", "Quantitative"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "alpaca-py>=0.12.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
